# trackforge

./: .gitignore  Cargo.toml  LICENSE  README.md  cliff.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: build_latest_json.py  check-release-version.js  sync-version.js
src/: ffmpeg.rs  ffprobe.rs  main.rs  tools.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-ui/: App.vue  styles.css  useSettings.ts
src-ui/components/: SettingsModal.vue
tools/: install-ffmpeg-macos.sh  install-ffmpeg-windows.ps1
