[package]
name = "trackforge-tauri"
version = "0.1.1"
edition = "2024"

[lib]
name = "trackforge_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
anyhow = "1.0.98"
fs2 = "0.4.3"
keepawake = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.8.5", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.4.0"
